--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>website layout html only</title>
 </head>
 <body>
-    <table border="1" width="100%" height="25" ><img src="d:/image/Bismillah2.jpeg" width="100%" height="125">  
+    <table border="1" width="100%" height="25" ><img src="Bismillah2.jpeg" width="100%" height="125">  
         <nav>    
             <th bgcolor="olivedrab"><a href="/home/">Home</a></th>
             <th bgcolor="plum">     <a href="/#About/">About</a></th>
@@ -47,7 +47,7 @@
                          </td>
                              <td height="" width="" rowspan="4">
                                  <aside bgcolor="grid"><h1><u><strong>Introduce:</strong></u></h1><abbr title="Abdul Kareem Muhammed">A.K.M.</abbr>OBAYADUL HAQUE<br><cite>FAKHARUL</cite><br>WDD-03 ROLL:113
-                                    <img src="image/pp.jpg" width="100%" height="650"/></aside>
+                                    <img src="pp.jpg" width="100%" height="650"/></aside>
                                  <address>
                                      <pre>	  
                                          <br>A.K.M.Obayadul Haque Fakharul
@@ -98,7 +98,7 @@
                      </tr>
 
                      <tr>
-                         <td height="250" colspan="3" rowspan="1"><img src="image/Bismillah3.jpeg" height="350" width="1024">
+                         <td height="250" colspan="3" rowspan="1"><img src="Bismillah3.jpeg" height="350" width="1024">
                          </td>
                          
                      </tr>
