--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                  <tbody>
                      <tr>
                          <td><abbr title="Abdul Kareem Muhammed">A.K.M.</abbr>OBAYADUL HAQUE<br><cite>FAKHARUL</cite><br>WDD-03 ROLL:113
-                         <img src="image/pp.jpg" width="100" height="100"/></td>
+                         <img src="pp.jpg" width="100" height="100"/></td>
                          <td width="500" colspan="2">
                          <div>
                              <i>
