--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <th bgcolor="olivedrab"><a href="/home/">Home</a></th>
             <th bgcolor="plum">     <a href="/#About/">About</a></th>
             <th bgcolor="violet">   <a href="#/Mission/">Misson</a></th>
-            <th bgcolor="orchid">   <a href="/#/">Vison</a></th>
+            <th bgcolor="orchid">   <a href="/#/">Vision</a></th>
             <th bgcolor="olive">    <a href="#">Contact</a></th>
         </nav>     
     </table>    
