--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                                  <dt>Hobbies</dt>
                                      <li>Visiting</li>
                                      <li>Surfacing on Map</li>
-                                     <li>Quaintness</li>
+                                     <li>Quietness</li>
                              </ol>
                          </td>
                      </tr>
