--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                  <tr>
                     <td height="5" colspan="4">    
                         <marquee loop="" direction="" behavior="" height="" width="" scrollamount="" bgcolor="sky-blue">
-                        <strong>WELCOME MY FIRST WEBSITE</strong> 
+                        <strong>WELCOME TO MY FIRST WEBSITE</strong> 
                         </marquee>
                     </td>
                  </tr>
